fixed post-accepting request ui issue with not showing acceptance - used refs and separate action to fetch new friends with comparison to old

--- a/src/components/FriendRequests/Request/Request.css
+++ b/src/components/FriendRequests/Request/Request.css
@@ -112,7 +112,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 2px;
+    margin-left: 3px;
 }
 
 .ActionMessage {
